[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lasersell-sdk"
version = "0.2.0"
description = "Python SDK for the LaserSell API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "LaserSell" },
]
keywords = ["solana", "trading", "defi", "sdk", "lasersell", "cryptocurrency"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "websockets>=12,<16",
  "solders>=0.21",
]

[project.urls]
Homepage = "https://lasersell.io"
Documentation = "https://github.com/lasersell/lasersell-sdk/tree/main/python"
Repository = "https://github.com/lasersell/lasersell-sdk"
"Bug Tracker" = "https://github.com/lasersell/lasersell-sdk/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
