[package]
name = "lasersell-sdk"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust SDK for the LaserSell API"
authors = ["LaserSell <support@lasersell.io>"]
homepage = "https://lasersell.io"
repository = "https://github.com/lasersell/lasersell-sdk"
documentation = "https://github.com/lasersell/lasersell-sdk/tree/main/rust"
readme = "README.md"
keywords = ["solana", "trading", "defi", "sdk", "lasersell"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
secrecy = "0.8"
thiserror = "1"
base64 = "0.21"
bincode = "1.3"
solana-sdk = "=3.0.0"
tracing = "0.1"
lasersell-stream-proto = "0.1.1"

[dev-dependencies]
axum = { version = "0.7", features = ["ws", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
